# gitfinder

./: CLAUDE.md  Cargo.toml  README.md
docs/: SKILL-triage.md  lsproj-PLAN.md  lsproj_design.md  lsproj_mcp.md  project_identification_rules.md
docs/plans/: 2026-06-25-lsproj-phase3-cli.md
docs/superpowers/plans/: 2026-06-27-look-up-for-dot-git.md
docs/superpowers/specs/: 2026-06-27-look-up-for-dot-git-design.md
src/: filter.rs  fs_meta.rs  git_info.rs  lib.rs  loc.rs  main.rs  metadata.rs  output.rs  repostatus.rs
tests/: cli.rs
